Fixed navbar right spacing issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ html, body, div,
   background: rgba(#ffffff, 0.9);
   z-index: 999999999;
   h1 {
-    width: 200px;
+    width: auto;
     margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
